# rust-api-training

./: Cargo.toml
entity/: Cargo.toml
entity/src/: post.rs
src/: main.rs
